# colormath

./: .gitignore  CHANGELOG.md  LICENSE  LIFECYCLE.md  Makefile.colormath  README.md  eslint.config.colormath.mjs
.claude-plugin/: marketplace.json
.github/actions/gate-summary/: action.yml
.github/actions/setup-node/: action.yml
.github/actions/setup-python-poetry/: action.yml
.github/workflows/: ci.yml  gates.yml  review.yml
docs/: adoption-notes.md
example/: .htmlvalidate.json  .stylelintrc.json  Dockerfile  README.md  conftest.py  eslint.config.js  main.py  package-lock.json  package.json  pyproject.toml
example/.colormath/: audit.conf  ci.env
example/alembic/versions/: 0001_initial.py
example/example_pkg/: __init__.py  service.py  web.py
example/static/css/src/: styles.css
example/static/js/: sum.test.js
example/templates/: index.html
example/tests/: test_example_pkg.py  test_main.py
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/skills/bugfix/: SKILL.md
plugin/skills/qa/: SKILL.md
plugin/skills/qa/references/: accessibility.md  correctness.md  recon.md  security.md
plugin/skills/ship/: SKILL.md
scripts/: audit-deps.sh  diff-coverage.sh  migrations-sync.sh
