[project]
name = "colormath-example"
version = "0.1.0"
description = "Minimal app of the PorticoFoundry archetype; the colormath gates run against it in CI"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115,<1.0)",
    "jinja2 (>=3.1,<4.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<9"
pytest-cov = ">=6.0,<8"
httpx = ">=0.27,<1.0"
mypy = ">=1.13,<2"
ruff = ">=0.14,<0.15"

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["\\.venv"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "node_modules"]

[tool.interrogate]
fail-under = 100
exclude = ["tests", ".venv", "node_modules", "alembic"]
verbose = 1

[tool.djlint]
profile = "jinja"
ignore = "H030,H031"

[tool.coverage.run]
omit = ["tests/*", "alembic/*"]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.importlinter]
# Import boundaries for the import-linter gate. Contracts are declared here and
# enforced by `lint-imports` (see gates.yml / `make import-linter`). This is a
# minimal demo: the service layer is the domain core and must not reach "up"
# into the web/delivery layer. Real consumers add layers/forbidden/independence
# contracts describing their own architecture.
root_package = "example_pkg"

[[tool.importlinter.contracts]]
name = "service layer must not import the web layer"
type = "forbidden"
source_modules = ["example_pkg.service"]
forbidden_modules = ["example_pkg.web"]
